@@ -41,6 +41,7 @@ JAVA_OPTS="-server -XX:+UseG1GC -XX:MaxGCPauseMillis=200 \
 --add-opens=java.base/sun.nio.cs=ALL-UNNAMED \
 --add-opens=java.base/sun.security.action=ALL-UNNAMED \
 --add-opens=java.base/sun.util.calendar=ALL-UNNAMED \
+--add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED \
 "
 
 if [ -n "$JMX_REMOTE_PORT_CONFIG" ];then
